--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-Django==3.2.7djangdjango-rest-auth==0.9.5djangorestframework==3.13.1drf-spectacular==0.22.1drf-writable-nested==0.6.3
+Django==3.2.7django-rest-auth==0.9.5djangorestframework==3.13.1drf-spectacular==0.22.1drf-writable-nested==0.6.3
